<resources>
    <string name="app_name">Vending Machine</string>
    <string name="action_settings">Maintenance</string>
    <string name="products_fragment_label">Products Fragment</string>
    <string name="coins_fragment_label">Coins Fragment</string>
    <string name="splash_fragment_label">Splash Fragment</string>
    <string name="maintenance_fragment_label">Maintenance Fragment</string>
    <string name="error_fragment_label">Error Fragment</string>
    <string name="reset_products">Reset Products</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="retry_button">Retry</string>
    <string name="exit_toast">Click BACK again to exit</string>

    <string name="coins_inserted">Coins\nInserted</string>
    <string name="product_price">Product\nPrice</string>
    <string name="product_no_quantity">No Quantity</string>
    <string name="alert_title_thank_you">THANK YOU!</string>
    <string name="alert_text_get_product">Please get your product</string>
    <string name="alert_text_get_change">Coins returned as change</string>
    <string name="alert_title_order_canceled">ORDER CANCELLED!</string>
    <string name="alert_text_order_canceled">Coins returned as change</string>
    <string name="alert_text_order_coins_holder">%1$s x\n %2$s</string>

    <string name="alert_title_out_of_order">OUT OF ORDER!</string>
    <string name="alert_text_enter_maintenance">Enter maintenance!</string>
    <string name="alert_out_of_order_reset">"LOAD COINS"</string>
    <string name="no_internet">Network error</string>
    <string name="error">Error</string>
    <string name="no_internet_connection">Network error\nPlease check your connection</string>
    <string name="check_connection">Please check your connection</string>
    <string name="checking_connection">Connecting…</string>
    <string name="loading_products">Loading Products</string>

    <string name="maintenance_products_reset">Products reset</string>
    <string name="maintenance_coins_reset">Coins reset</string>

    <string name="alert_quit_maintenance_title">Quit maintenance</string>
    <string name="alert_maintenance_reset_products">Reset products</string>
    <string name="alert_maintenance_reset_coins">Reset coins</string>
    <string name="alert_quit_maintenance_text">Are you sure?</string>
    <string name="alert_quit_maintenance_ok">@android:string/yes</string>
    <string name="alert_cancel">@android:string/cancel</string>

    <string name="vending_machine">Vending\nMachine</string>

</resources>