<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.example.vending.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_ProductsFragment"
            app:destination="@id/ProductsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />

        <action
            android:id="@+id/action_MaintenanceFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:destination="@id/MaintenanceFragment" />
    </fragment>

    <fragment
        android:id="@+id/ProductsFragment"
        android:name="com.example.vending.user.ProductsFragment"
        android:label="@string/products_fragment_label"
        tools:layout="@layout/fragment_products">

        <action
            android:id="@+id/action_ProductsFragment_to_CoinsFragment"
            app:enterAnim="@anim/slide_in_up"
            app:exitAnim="@anim/fade_out"
            app:destination="@id/CoinsFragment" />
        <action
            android:id="@+id/action_MaintenanceFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:destination="@id/MaintenanceFragment" />
    </fragment>
    <fragment
        android:id="@+id/CoinsFragment"
        android:name="com.example.vending.user.CoinsFragment"
        android:label="@string/coins_fragment_label"
        tools:layout="@layout/fragment_coins">

        <action
            android:id="@+id/action_CoinsFragment_to_ProductsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/slide_out_down"
            app:destination="@id/ProductsFragment" />
        <action
            android:id="@+id/action_MaintenanceFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:destination="@id/MaintenanceFragment" />
    </fragment>
    <fragment
        android:id="@+id/MaintenanceFragment"
        android:name="com.example.vending.maintenance.MaintenanceFragment"
        android:label="@string/maintenance_fragment_label"
        tools:layout="@layout/fragment_maintenance">

        <action
            android:id="@+id/action_MaintenanceFragment_to_ProductsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:destination="@id/ProductsFragment" />

    </fragment>
</navigation>