<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical"
    tools:context=".SplashActivity">
    <TextView
        android:id="@+id/splashTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:gravity="center"
        android:text="@string/vending_machine"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNoConnection"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/splashTitle"
        android:layout_alignParentBottom="true"
        >
        <TextView
            android:id="@+id/noConnectionText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/no_internet_connection"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/button_retry"
            app:layout_constraintTop_toBottomOf="@id/noConnectionText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_margin="32dp"
            android:text="@string/retry_button"
            android:textColor="@color/white"
            android:background="@drawable/coin_amounts_button_round_background"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>