<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".screen.CoinsFragment">

    <TextView
        android:visibility="gone"
        android:id="@+id/coins_insert_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/select_coin"
        android:layout_marginTop="16dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coins_inserted_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/coins_inserted"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/product_price_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coins_insert_text" />

    <TextView
        android:id="@+id/coins_inserted_amount"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:background="@drawable/coin_amounts_button_round_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/product_price"
        app:layout_constraintTop_toBottomOf="@id/coins_inserted_text"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/product_price_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/product_price"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coins_inserted_text"
        app:layout_constraintTop_toBottomOf="@id/coins_insert_text" />


    <TextView
        android:id="@+id/product_price"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:text="0.80"
        android:textColor="?attr/colorPrimary"
        android:background="@drawable/coin_amounts_button_round_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/coins_inserted_amount"
        app:layout_constraintTop_toBottomOf="@id/product_price_text"
        tools:layout_editor_absoluteX="263dp"
        tools:layout_editor_absoluteY="142dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/fab"
        app:layout_constraintTop_toBottomOf="@id/coins_inserted_amount" >

        <GridLayout
            android:id="@+id/coins_list"
            android:columnCount="2"
            android:useDefaultMargins="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" />
    </ScrollView>

    <Button
        android:visibility="gone"
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />


</androidx.constraintlayout.widget.ConstraintLayout>